# rust_mlkem

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/common/: params.rs
src/mlkem-512/: error.rs  mod.rs  params.rs  poly.rs  polyvec.rs  symmetric.rs  test.rs  zetas.rs
src/mlkem-512/backend/: mod.rs
src/mlkem-512/backend/clean/: mod.rs  ntt.rs  poly.rs  reduce.rs
src/mlkem-512/backend/neon/: mod.rs  ntt.rs  reduce.rs
src/mlkem-512/backend/reference/: mod.rs  ntt.rs  poly.rs  reduce.rs
src/mlkem-512/clean/: mod.rs  reduce.rs
