[package]
name = "mlkem"
version = "0.1.0"
edition = "2024"
authors = ["PinHao Chen <pinhaocrypto@gmail.com>"]
description = "A Rust implementation of the ML-KEM (Module-Lattice based Key Encapsulation Mechanism) post-quantum cryptographic algorithm"
license = "MIT"
repository = "https://github.com/pinhaocrypto/rust_mlkem"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "kem", "lattice", "mlkem"]
categories = ["cryptography", "no-std"]

[lib]
name = "mlkem"
path = "src/lib.rs"

[features]
default = ["reference", "mlkem512"]
reference = []
native = []
neon = ["native"]
mlkem512 = []
mlkem768 = []
mlkem1024 = []
serde = ["dep:serde"]

[dependencies]
criterion = "0.6.0"
sha3 = "0.10.8"
rand = "0.9.0"
rand_chacha = "0.9.0"
byteorder = "1.5.0"
pretty_assertions = "1.3.0"
thiserror = "2.0.12"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }

